--- a/index.html
+++ b/index.html
@@ -10,8 +10,126 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/circular-font.css" />
+    <link rel="stylesheet" href="./assets/css/index.css" />
+    <style>
+      main {
+        font-family: "Circular";
+      }
+    </style>
   </head>
-  <body>
+  <body class="bg-dark text-light pb-5">
+    <!-- Nav -->
+    <header>
+      <nav
+        class="navbar position-fixed bottom-0 start-0 end-0 p-2 rounded m-3 z-1"
+      >
+        <ul class="nav w-100 d-flex">
+          <li class="nav-item text-center flex-fill min-width-0">
+            <a href="#" class="nav-link px-0 small text-white px-0 d-block">
+              <i class="bi bi-house-door d-block fs-5"></i>
+              Home
+            </a>
+          </li>
+          <li class="nav-item text-center flex-fill px-0 min-width-0">
+            <a href="#" class="nav-link px-0 small text-white d-block">
+              <i class="bi bi-search d-block fs-5"></i>
+              Cerca
+            </a>
+          </li>
+          <li class="nav-item text-center flex-fill px-0 min-width-0">
+            <a href="#" class="nav-link px-0 small text-white d-block">
+              <i class="bi bi-collection d-block fs-5"></i>
+              Libreria
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <!--Player-->
+      <div class="position-fixed start-0 end-0 px-2 m-2 z-2 player">
+        <div
+          class="bg-secondary text-white rounded d-flex align-items-center justify-content-between px-3 py-2 shadow"
+          style="height: 56px"
+        >
+          <div
+            class="text-truncate me-3 fw-semibold small"
+            style="max-width: 50%"
+          >
+            Supernatural Parody by The Hillywood Show
+          </div>
+
+          <!-- Icone player-->
+          <div class="d-flex align-items-center gap-3">
+            <i class="bi bi-speaker fs-5"></i>
+            <i class="bi bi-heart fs-5"></i>
+            <i class="bi bi-play-fill fs-4"></i>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="vh-100">
+      <div class="container mt-5">
+        <!-- Header -->
+        <div class="row align-items-center">
+          <div class="col-7 p-4">
+            <h1>Buonasera</h1>
+          </div>
+          <div class="col-5">
+            <ul class="nav p-0 w-100 m-0">
+              <li class="nav-item text-center flex-fill">
+                <a href="#" class="nav-link text-white fs-5"
+                  ><i class="bi bi-bell"></i
+                ></a>
+              </li>
+              <li class="nav-item text-center flex-fill">
+                <a href="#" class="nav-link text-white fs-5"
+                  ><i class="bi bi-clock"></i
+                ></a>
+              </li>
+              <li class="nav-item text-center flex-fill">
+                <a href="#" class="nav-link text-white fs-5"
+                  ><i class="bi bi-gear"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Inizio dei contenuti della pagina -->
+        <div class="row ps-4 mb-4">
+          <div class="col-3">
+            <a href="#" class="btn text-white px-2">Musica</a>
+          </div>
+          <div class="col-4">
+            <a href="#" class="btn text-white px-2">Podcast e show</a>
+          </div>
+        </div>
+        <div class="row gx-1">
+          <div class="col-6 col-md-4">
+            <div
+              class="card flex-row align-items-center bg-dark text-white border-0"
+            >
+              <img
+                src="./assets/imgs/main/image-1.jpg"
+                alt="Foto Playlist"
+                class="card-img-left img-fluid rounded-start"
+                width="64"
+                height="64"
+              />
+              <div class="card-body px-2 flex-grow-1">
+                <p class="card-text text-truncate fw-semibold duerighe">
+                  Nome Playlist Placeholder
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
