--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </style>
   </head>
   <body class="bg-dark text-light pb-5">
-    <!-- Nav -->
+    <!-- Nav che si nasconde in desktop -->
     <header>
       <nav
-        class="navbar position-fixed bottom-0 start-0 end-0 p-2 rounded m-3 z-1"
+        class="navbar position-fixed bottom-0 start-0 end-0 p-2 rounded m-3 z-1 d-lg-none"
       >
         <ul class="nav w-100 d-flex">
           <li class="nav-item text-center flex-fill min-width-0">
@@ -49,8 +49,8 @@
           </li>
         </ul>
       </nav>
-      <!--Player-->
-      <div class="position-fixed start-0 end-0 px-2 m-2 z-2 player">
+      <!--Player che si nasconde in desktop-->
+      <div class="position-fixed start-0 end-0 px-2 m-2 z-2 player d-none">
         <div
           class="bg-secondary text-white rounded d-flex align-items-center justify-content-between px-3 py-2 shadow"
           style="height: 56px"
@@ -99,7 +99,7 @@
           </div>
         </div>
         <!-- Inizio dei contenuti della pagina -->
-        <div class="row ps-4 mb-4">
+        <div class="row ps-4 mb-4 d-md-none">
           <div class="col-3">
             <a href="#" class="btn text-white px-2">Musica</a>
           </div>
