--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </ul>
       </nav>
       <!--Player che si nasconde in desktop-->
-      <div class="position-fixed start-0 end-0 px-2 m-2 z-2 player d-none">
+      <div class="position-fixed start-0 end-0 px-2 m-2 z-2 player d-lg-none">
         <div
           class="bg-secondary text-white rounded d-flex align-items-center justify-content-between px-3 py-2 shadow"
           style="height: 56px"
