--- a/artist.html
+++ b/artist.html
@@ -20,6 +20,7 @@
 
   <body class="bg-dark text-white pb-5">
     <header>
+      <!-- NAVBAR infondo -->
       <nav
         class="navbar position-fixed bottom-0 start-0 end-0 p-2 rounded m-3 z-1 d-lg-none"
       >
