--- a/album.html
+++ b/album.html
@@ -12,6 +12,12 @@
     />
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col"></div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
