--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row">
           <!-- Nav desktop a sinistra -->
           <div
-            class="col col-lg-2 d-none d-lg-block vh-100 bg-black d-flex flex-column text-white p-4"
+            class="col col-lg-2 d-none d-lg-block bg-black d-flex flex-column text-white p-4"
           >
             <i class="bi bi-three-dots fs-3"></i>
             <!-- Prima Ul con Home Cerca e Libreria -->
@@ -149,7 +149,7 @@
             </div>
           </div>
           <!-- Container Centrale che in mobile è fullscreen -->
-          <div class="col-12 col-lg-8 vh-100 bg-dark">
+          <div class="col-12 col-lg-8 bg-dark">
             <div class="container mt-5">
               <!-- Header -->
               <div class="row align-items-center">
@@ -185,7 +185,9 @@
                   <a href="#" class="btn text-white px-2">Podcast e show</a>
                 </div>
               </div>
-              <div class="row gx-1">
+
+              <div class="row g-1" id="mainRow">
+                <!--
                 <div class="col-6 col-md-4">
                   <div
                     class="card flex-row align-items-center bg-dark text-white border-0"
@@ -204,12 +206,26 @@
                     </div>
                   </div>
                 </div>
+                -->
+              </div>
+              <h2 class="my-5">Altro di ciò che ti piace</h2>
+              <div class="row g-2" id="secondRow">
+                <!--<div class="col col-12 col-md-6 col-lg-3">
+                  <a href="#" class="text-decoration-none text-white"
+                    ><div class="card bg-dark">
+                      <img src="..." class="card-img-top" alt="..." />
+                      <div class="card-body">
+                        <h5 class="card-title text-light">Card title</h5>
+                      </div>
+                    </div></a
+                  >
+                </div> -->
               </div>
             </div>
           </div>
           <!-- Lista amici (solo desktop) a destra -->
           <div
-            class="col col-lg-2 d-none d-lg-block vh-100 bg-black d-flex flex-column text-white ps-4 pt-5"
+            class="col col-lg-2 d-none d-lg-block bg-black d-flex flex-column text-white ps-4 pt-5"
           >
             <div
               class="amici-header d-flex flex-row justify-content-between align-items-center"
