--- a/album.html
+++ b/album.html
@@ -5,13 +5,427 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Album</title>
     <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="assets/css/album.css" />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
   </head>
+  <!--  -->
   <body>
+    <main>
+      <div class="container-fluid p-0">
+        <div class="row no-gutters">
+          <div class="col-lg-3 col-4 d-none d-lg-block sidebar-left bg-black">
+            <!-- contenuto della colonna sinistra -->
+          </div>
+          <!-- 
+          
+          -->
+          <div class="col-lg-7 col-12 main-content bg-dark">
+            <!-- contenuto della colonna centrale -->
+            <div class="col-lg-12 col-12 main-content bg-black">
+              <div class="arrows" style="position: relative; z-index: 1">
+                <div
+                  style="
+                    position: absolute;
+                    top: 10px;
+                    left: 10px;
+                    display: flex;
+                    gap: 10px;
+                    z-index: 1;
+                  "
+                >
+                  <img
+                    src="assets/imgs/album/freccia1.PNG"
+                    style="
+                      width: 24px;
+                      height: 24px;
+                      opacity: 0.356;
+                      transform: rotate(180deg);
+                    "
+                    class="arrow-sx"
+                  />
+                  <img
+                    class="arrow-dx d-none d-lg-block"
+                    src="assets/imgs/album/freccia1.PNG"
+                    style="width: 24px; height: 24px; opacity: 0.356"
+                  />
+                </div>
+              </div>
+              <div id="container-img" style="margin: 0px">
+                <img
+                  src="assets\imgs\album\immaginealbum.jpg"
+                  alt="Immagine album"
+                  class="img-album"
+                />
+                <!-- mobile -->
+                <section
+                  id="sez-titolo-album-s"
+                  class="sez-titolo-album d-block d-lg-none"
+                >
+                  <h1 id="titolo-album">Gioventù brucata</h1>
+                  <div
+                    class="artista-info d-block d-lg-none"
+                    style="display: flex !important"
+                  >
+                    <img
+                      src="assets\imgs\album\icona-artista.PNG"
+                      alt="Icona artista"
+                      class="artista-icon"
+                    />
+                    <div class="info-album-artista">
+                      <span class="artista-album"
+                        >Pinguini Tattici Nucleari</span
+                      >
+                    </div>
+                  </div>
+                  <div class="prodotto-info">
+                    <span>Album</span>
+                    <span class="dot">&middot;</span>
+                    <span class="anno-album">2017</span>
+                  </div>
+                  <!-- AZIONI ALBUM -->
+
+                  <div class="azioni-album">
+                    <div class="azioni-sinistra">
+                      <i class="bi bi-heart" style="color: #fff"></i>
+                      <i
+                        class="bi bi-arrow-down-circle"
+                        style="color: #ccc"
+                      ></i>
+                      <i
+                        class="bi bi-three-dots-vertical"
+                        style="color: #ccc"
+                      ></i>
+                    </div>
+                    <div class="azioni-destra">
+                      <i class="bi bi-shuffle" style="color: #ccc"></i>
+                      <button class="btn-play">
+                        <i class="bi bi-play-fill" style="color: #fff"></i>
+                      </button>
+                    </div>
+                  </div>
+                </section>
+                <!-- desktop -->
+                <div class="title-block d-none d-lg-block">
+                  <span class="tipo-album-d d-none d-lg-block">ALBUM</span>
+                  <h1 class="titolo-album-d mb-2">Gioventù brucata</h1>
+                  <div
+                    class="artista-info d-none d-lg-block d-flex align-items-center"
+                    style="display: flex !important"
+                  >
+                    <img
+                      src="assets\imgs\album\icona-artista.PNG"
+                      alt="Icona artista"
+                      class="artista-icon me-2"
+                    />
+                    <div class="info-album-artista">
+                      <span class="artista-album"
+                        >Pinguini Tattici Nucleari</span
+                      >
+                      <span class="dot">&middot;</span>
+                      <span class="anno-album">2017</span>
+                      <span class="dot">&middot;</span>
+                      <span class="numero-tracce">12 brani</span>
+                      <span class="dot">&middot;</span>
+                      <span id="durata-album" class="durata-album"
+                        >53 min 20 sec</span
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="lettore-tracce-d">
+                <div
+                  class="azioni-album-d d-none d-lg-flex align-items-center mt-3"
+                >
+                  <button
+                    class="btn-play me-3"
+                    style="
+                      background-color: #34c759;
+                      border: none;
+                      border-radius: 50%;
+                      width: 40px;
+                      height: 40px;
+                      display: flex;
+                      justify-content: center;
+                      align-items: center;
+                    "
+                  >
+                    <i
+                      class="bi bi-play-fill"
+                      style="color: #000; font-size: 149%"
+                    ></i>
+                  </button>
+                  <i class="bi bi-heart me-3" style="color: #fff"></i>
+                  <i
+                    class="bi bi-arrow-down-circle me-3"
+                    style="color: #fff"
+                  ></i>
+                  <i class="bi bi-three-dots" style="color: #fff"></i>
+                </div>
+                <!--  -->
+                <!-- TRACCE ALBUM -->
+
+                <section id="tracce-album">
+                  <div
+                    class="tab traccia-tab d-none d-lg-block"
+                    style="display: flex !important"
+                  >
+                    <div
+                      class="tab traccia-int-tab d-none d-lg-block"
+                      style="display: flex !important"
+                    >
+                      <div
+                        style="
+                          display: flex !important;
+                          align-items: center !important;
+                        "
+                      >
+                        <span class="tab num-traccia-tab d-none d-lg-block"
+                          >#</span
+                        >
+                        <div class="tab info-traccia-tab d-none d-lg-block">
+                          <span class="tab titolo-traccia-tab d-none d-lg-block"
+                            >TITOLO</span
+                          >
+                        </div>
+                      </div>
+                      <span class="tab riproduzioni-tab d-none d-lg-block"
+                        >RIPRODUZIONI</span
+                      >
+                      <i
+                        class="tab durata-traccia-tab d-none d-lg-block bi bi-clock text-primary fs-3"
+                        style="
+                          font-size: 0.9em !important;
+                          color: #ccc !important;
+                        "
+                      ></i>
+
+                      <div class="tab d-lg-none azioni-traccia-tab">
+                        <i
+                          class="tab bi bi-three-dots-vertical"
+                          style="color: #ccc"
+                        ></i>
+                      </div>
+                    </div>
+                  </div>
+                  <!--  -->
+                  <div class="separatore"></div>
+                  <!--  -->
+                  <div class="traccia">
+                    <div class="traccia-int">
+                      <div
+                        style="
+                          display: flex !important;
+                          align-items: center !important;
+                        "
+                      >
+                        <span class="num-traccia d-none d-lg-block">1</span>
+                        <div class="info-traccia">
+                          <span class="titolo-traccia">Titolo Traccia</span>
+                          <span class="artista-traccia">Nome Artista</span>
+                        </div>
+                      </div>
+                      <span class="riproduzioni d-none d-lg-block">
+                        2342.432</span
+                      >
+                      <span class="durata-traccia d-none d-lg-block">
+                        1:26</span
+                      >
+                      <div class="d-lg-none azioni-traccia">
+                        <i
+                          class="bi bi-three-dots-vertical"
+                          style="color: #ccc"
+                        ></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="traccia">
+                    <div class="traccia-int">
+                      <div
+                        style="
+                          display: flex !important;
+                          align-items: center !important;
+                        "
+                      >
+                        <span class="num-traccia d-none d-lg-block">1</span>
+                        <div class="info-traccia">
+                          <span class="titolo-traccia">Titolo Traccia</span>
+                          <span class="artista-traccia">Nome Artista</span>
+                        </div>
+                      </div>
+                      <span class="riproduzioni d-none d-lg-block">
+                        2342.432</span
+                      >
+                      <span class="durata-traccia d-none d-lg-block">
+                        1:26</span
+                      >
+                      <div class="d-lg-none azioni-traccia">
+                        <i
+                          class="bi bi-three-dots-vertical"
+                          style="color: #ccc"
+                        ></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="traccia">
+                    <div class="traccia-int">
+                      <div
+                        style="
+                          display: flex !important;
+                          align-items: center !important;
+                        "
+                      >
+                        <span class="num-traccia d-none d-lg-block">1</span>
+                        <div class="info-traccia">
+                          <span class="titolo-traccia">Titolo Traccia</span>
+                          <span class="artista-traccia">Nome Artista</span>
+                        </div>
+                      </div>
+                      <span class="riproduzioni d-none d-lg-block">
+                        2342.432</span
+                      >
+                      <span class="durata-traccia d-none d-lg-block">
+                        1:26</span
+                      >
+                      <div class="d-lg-none azioni-traccia">
+                        <i
+                          class="bi bi-three-dots-vertical"
+                          style="color: #ccc"
+                        ></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="traccia">
+                    <div class="traccia-int">
+                      <div
+                        style="
+                          display: flex !important;
+                          align-items: center !important;
+                        "
+                      >
+                        <span class="num-traccia d-none d-lg-block">1</span>
+                        <div class="info-traccia">
+                          <span class="titolo-traccia">Titolo Traccia</span>
+                          <span class="artista-traccia">Nome Artista</span>
+                        </div>
+                      </div>
+                      <span class="riproduzioni d-none d-lg-block">
+                        2342.432</span
+                      >
+                      <span class="durata-traccia d-none d-lg-block">
+                        1:26</span
+                      >
+                      <div class="d-lg-none azioni-traccia">
+                        <i
+                          class="bi bi-three-dots-vertical"
+                          style="color: #ccc"
+                        ></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="traccia">
+                    <div class="traccia-int">
+                      <div
+                        style="
+                          display: flex !important;
+                          align-items: center !important;
+                        "
+                      >
+                        <span class="num-traccia d-none d-lg-block">1</span>
+                        <div class="info-traccia">
+                          <span class="titolo-traccia">Titolo Traccia</span>
+                          <span class="artista-traccia">Nome Artista</span>
+                        </div>
+                      </div>
+                      <span class="riproduzioni d-none d-lg-block">
+                        2342.432</span
+                      >
+                      <span class="durata-traccia d-none d-lg-block">
+                        1:26</span
+                      >
+                      <div class="d-lg-none azioni-traccia">
+                        <i
+                          class="bi bi-three-dots-vertical"
+                          style="color: #ccc"
+                        ></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="traccia">
+                    <div class="traccia-int">
+                      <div
+                        style="
+                          display: flex !important;
+                          align-items: center !important;
+                        "
+                      >
+                        <span class="num-traccia d-none d-lg-block">1</span>
+                        <div class="info-traccia">
+                          <span class="titolo-traccia">Titolo Traccia</span>
+                          <span class="artista-traccia">Nome Artista</span>
+                        </div>
+                      </div>
+                      <span class="riproduzioni d-none d-lg-block">
+                        2342.432</span
+                      >
+                      <span class="durata-traccia d-none d-lg-block">
+                        1:26</span
+                      >
+                      <div class="d-lg-none azioni-traccia">
+                        <i
+                          class="bi bi-three-dots-vertical"
+                          style="color: #ccc"
+                        ></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="traccia">
+                    <div class="traccia-int">
+                      <div
+                        style="
+                          display: flex !important;
+                          align-items: center !important;
+                        "
+                      >
+                        <span class="num-traccia d-none d-lg-block">1</span>
+                        <div class="info-traccia">
+                          <span class="titolo-traccia">Titolo Traccia</span>
+                          <span class="artista-traccia">Nome Artista</span>
+                        </div>
+                      </div>
+                      <span class="riproduzioni d-none d-lg-block">
+                        2342.432</span
+                      >
+                      <span class="durata-traccia d-none d-lg-block">
+                        1:26</span
+                      >
+                      <div class="d-lg-none azioni-traccia">
+                        <i
+                          class="bi bi-three-dots-vertical"
+                          style="color: #ccc"
+                        ></i>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-2 d-none d-lg-block sidebar-right bg-black">
+            <!-- contenuto della colonna destra -->
+          </div>
+        </div>
+      </div>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
