--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </div>
     </header>
-    <main class="vh-100">
+    <main>
       <div class="container-fluid">
         <div class="row">
           <!-- Nav desktop a sinistra -->
@@ -150,9 +150,75 @@
           </div>
           <!-- Container Centrale che in mobile è fullscreen -->
           <div class="col-12 col-lg-8 bg-dark">
+            <div class="d-flex justify-content-end">
+              <div class="dropdown d-flex pt-3">
+                <button
+                  class="btn btn-outline-dark dropdown-toggle text-white"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Mario Rossi
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Il tuo Account</a></li>
+                  <li><a class="dropdown-item" href="#">Impostazioni</a></li>
+                  <li><a class="dropdown-item" href="#">Esci</a></li>
+                </ul>
+              </div>
+            </div>
             <div class="container mt-5">
               <!-- Header -->
               <div class="row align-items-center">
+                <!-- Hero -->
+                <div class="col-12">
+                  <div class="card bg-black text-white border-0 px-2 p-4">
+                    <div class="container position-relative">
+                      <div class="row align-items-center">
+                        <div class="col-3 text-center">
+                          <div class="position-absolute top-0 end-0 mt-3 me-3">
+                            <a href="#" class="small btn">NASCONDI ANNUNCI</a>
+                          </div>
+                          <img
+                            src="./assets/imgs/main/image-1.jpg"
+                            alt="Immagine Hero"
+                            class="img-fluid"
+                          />
+                        </div>
+                        <div class="col-9">
+                          <div class="card-body">
+                            <p class="mb-1 small">ALBUM</p>
+                            <h1 class="card-title display-4 fw-bold">
+                              VIOLA
+                              <small class="fw-light">(feat. Salmo)</small>
+                              <h5 class="mb-3">Fedez, Salmo</h5>
+                              <p class="card-text">
+                                Ascolta il nuovo singolo di Fedez e Salmo!
+                              </p>
+                              <div class="d-flex align-items-center gap-3">
+                                <a
+                                  href="#"
+                                  class="btn btn-success btn-lg px-4 text-black rounded-pill"
+                                  >Play</a
+                                >
+                                <a
+                                  href="#"
+                                  class="btn btn-outline-light btn-lg px-4 rounded-pill"
+                                  >Salva</a
+                                >
+                                <a href="#" class="btn"
+                                  ><i
+                                    class="bi bi-three-dots fs-3 text-white"
+                                  ></i
+                                ></a>
+                              </div>
+                            </h1>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="col-7 p-4">
                   <h1>Buonasera</h1>
                 </div>
