--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row">
           <!-- Nav desktop a sinistra -->
           <div
-            class="col col-lg-2 d-none d-lg-block bg-black d-flex flex-column text-white p-4"
+            class="col col-lg-3 d-none d-lg-block bg-black d-flex flex-column text-white p-4 w-auto"
           >
             <i class="bi bi-three-dots fs-3"></i>
             <!-- Prima Ul con Home Cerca e Libreria -->
@@ -149,7 +149,7 @@
             </div>
           </div>
           <!-- Container Centrale che in mobile è fullscreen -->
-          <div class="col-12 col-lg-8 bg-dark">
+          <div class="col-12 col-lg-8 bg-dark flex-fill">
             <div class="d-flex justify-content-end">
               <div class="dropdown d-flex pt-3">
                 <button
