--- a/album.html
+++ b/album.html
@@ -21,15 +21,91 @@
     <main>
       <div class="container-fluid p-0">
         <div class="row no-gutters">
-          <div class="col-lg-3 col-4 d-none d-lg-block sidebar-left bg-black">
-            <!-- contenuto della colonna sinistra -->
+          <!-- contenuto della colonna sinistra -->
+          <div
+            class="col col-lg-3 d-none d-lg-block bg-black d-flex flex-column text-white p-4 w-auto"
+          >
+            <i class="bi bi-three-dots fs-3"></i>
+            <!-- Prima Ul con Home Cerca e Libreria -->
+            <ul class="nav w-100 d-flex flex-column mb-4">
+              <li class="nav-item text-center flex-fill min-width-0">
+                <a
+                  href="#"
+                  class="nav-link px-0 small text-white px-0 d-flex flex-row fs-4"
+                >
+                  <i class="bi bi-house-door d-block me-3"></i>
+                  Home
+                </a>
+              </li>
+              <li class="nav-item text-center flex-fill px-0 min-width-0">
+                <a
+                  href="#"
+                  class="nav-link px-0 small text-white d-flex flex-row align-items-center fs-4"
+                >
+                  <i class="bi bi-search d-block me-3"></i>
+                  Cerca
+                </a>
+              </li>
+              <li class="nav-item text-center flex-fill px-0 min-width-0">
+                <a
+                  href="#"
+                  class="nav-link px-0 small text-white d-flex flex-row fs-4"
+                >
+                  <i class="bi bi-collection d-block me-3"></i>
+                  Libreria
+                </a>
+              </li>
+            </ul>
+            <!-- Seconda Ul con Crea Playlist Brani che ti piacciono I tuoi episodi -->
+            <ul class="nav w-100 d-flex flex-column">
+              <li class="nav-item text-center flex-fill min-width-0">
+                <a
+                  href="#"
+                  class="nav-link px-0 small text-white px-0 d-flex flex-row fs-4"
+                >
+                  <i class="bi bi-plus-square-fill me-3"></i>
+                  Crea Playlist
+                </a>
+              </li>
+              <li class="nav-item text-center flex-fill px-0 min-width-0">
+                <a
+                  href="#"
+                  class="nav-link px-0 small text-white d-flex flex-row align-items-center fs-4"
+                >
+                  <i class="bi bi-heart-fill me-3 text-troncate text-start"></i>
+                  Brani che ti piacciono
+                </a>
+              </li>
+              <li class="nav-item text-center flex-fill px-0 min-width-0">
+                <a
+                  href="#"
+                  class="nav-link px-0 small text-white d-flex flex-row fs-4"
+                >
+                  <i class="bi bi-bookmark-fill me-3"></i>
+                  I tuoi episodi
+                </a>
+              </li>
+            </ul>
+            <hr class="text-secondary" />
+            <div class="elenco-playlist">
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+            </div>
           </div>
           <!-- 
           
           -->
-          <div class="col-lg-7 col-12 main-content bg-dark">
+          <div class="col-lg-8 col-12 main-content bg-dark">
             <!-- contenuto della colonna centrale -->
-            <div class="col-lg-12 col-12 main-content bg-black">
+            <div class="col-lg-12 col-12 bg-black">
               <div class="arrows" style="position: relative; z-index: 1">
                 <div
                   style="
@@ -420,9 +496,78 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-2 d-none d-lg-block sidebar-right bg-black">
-            <!-- contenuto della colonna destra -->
+          <div
+            class="col col-lg-2 d-none d-lg-block bg-black d-flex flex-column text-white ps-4 pt-5"
+          >
+            <div
+              class="amici-header d-flex flex-row justify-content-between align-items-center"
+            >
+              <h4 class="m-0">Attività Amici</h4>
+              <div class="icone-amici">
+                <i class="bi bi-person-plus fs-4 me-2"></i>
+                <i class="bi bi-x-lg fs-4"></i>
+              </div>
+            </div>
           </div>
+        </div>
+      </div>
+      <div
+        class="position-fixed bottom-0 start-0 end-0 bg-dark text-white px-4 py-2 d-none d-lg-flex align-items-center"
+      >
+        <!-- a sinistra copertina e info brano -->
+        <div
+          class="d-flex align-items-center flex-grow-1 z-3 justify-content-start w-25"
+        >
+          <img
+            src="./assets/imgs/main/image-1.jpg"
+            alt="Copertina album"
+            class="img-fluid rounded me-3 w-15"
+          />
+          <div class="text-truncate">
+            <div class="fw-semibold">Canzone</div>
+            <div class="text-secondary small">Artista</div>
+          </div>
+          <i class="bi bi-heart ms-3"></i>
+        </div>
+
+        <!--  controlli + barra di progresso della canzone -->
+        <div
+          class="d-flex flex-column align-items-center w-50 flex-grow-2 justify-content-center w-50"
+        >
+          <!-- Controlli del player-->
+          <div
+            class="d-flex align-items-center justify-content-center gap-3 mb-1"
+          >
+            <i class="bi bi-shuffle"></i>
+            <i class="bi bi-skip-start-fill"></i>
+            <i class="bi bi-play-circle-fill fs-3"></i>
+            <i class="bi bi-skip-end-fill"></i>
+            <i class="bi bi-shuffle"></i>
+          </div>
+          <!-- Bbarra di progresso della canzone -->
+          <div
+            class="d-flex align-items-center w-100 justify-content-center gap-2"
+          >
+            <span class="small text-secondary">0:00</span>
+            <div class="progress flex-grow-1 progresso-canzone">
+              <div class="progress-bar" role="progressbar"></div>
+            </div>
+            <span class="small text-secondary">4:00</span>
+          </div>
+        </div>
+
+        <!-- Sezione destra: opzioni + volume -->
+        <div
+          class="d-flex align-items-center gap-3 flex-grow-1 justify-content-end h-100 w-25"
+        >
+          <i class="bi bi-pen"></i>
+          <i class="bi bi-list"></i>
+          <i class="bi bi-pc-display"></i>
+          <i class="bi bi-volume-up"></i>
+          <div class="progress volume">
+            <div class="progress-bar bg-success" role="progressbar"></div>
+          </div>
+          <i class="bi bi-arrows-fullscreen"></i>
         </div>
       </div>
     </main>
