little layout fixes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Nav che si nasconde in desktop -->
     <header>
       <nav
-        class="navbar position-fixed bottom-0 start-0 end-0 p-2 rounded m-3 z-1 d-lg-none"
+        class="navbar position-fixed bottom-0 start-0 end-0 rounded z-1 d-lg-none bg-dark"
       >
         <ul class="nav w-100 d-flex">
           <li class="nav-item text-center flex-fill min-width-0">
