--- a/artist.html
+++ b/artist.html
@@ -22,7 +22,7 @@
     <header>
       <!-- NAVBAR infondo -->
       <nav
-        class="navbar position-fixed bottom-0 start-0 end-0 p-2 rounded m-3 z-1 d-lg-none"
+        class="navbar position-fixed bottom-0 start-0 end-0 rounded z-1 d-lg-none bg-dark"
       >
         <ul class="nav w-100 d-flex">
           <li class="nav-item text-center flex-fill min-width-0">
