--- a/album.html
+++ b/album.html
@@ -30,7 +30,7 @@
             <ul class="nav w-100 d-flex flex-column mb-4">
               <li class="nav-item text-center flex-fill min-width-0">
                 <a
-                  href="#"
+                  href="./index.html"
                   class="nav-link px-0 small text-white px-0 d-flex flex-row fs-4"
                 >
                   <i class="bi bi-house-door d-block me-3"></i>
@@ -295,7 +295,37 @@
                   <!--  -->
                   <div class="separatore"></div>
                   <!--  -->
+
                   <div class="traccia">
+                    <div class="traccia-int">
+                      <div
+                        style="
+                          display: flex !important;
+                          align-items: center !important;
+                        "
+                      >
+                        <span class="num-traccia d-none d-lg-block">1</span>
+                        <div class="info-traccia">
+                          <span class="titolo-traccia">Titolo Traccia</span>
+                          <span class="artista-traccia">Nome Artista</span>
+                        </div>
+                      </div>
+                      <span class="riproduzioni d-none d-lg-block">
+                        2342.432</span
+                      >
+                      <span class="durata-traccia d-none d-lg-block">
+                        1:26</span
+                      >
+                      <div class="d-lg-none azioni-traccia">
+                        <i
+                          class="bi bi-three-dots-vertical"
+                          style="color: #ccc"
+                        ></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="lista" class="container px-3"></div>
+                  <!-- <div class="traccia">
                     <div class="traccia-int">
                       <div
                         style="
@@ -462,35 +492,7 @@
                         ></i>
                       </div>
                     </div>
-                  </div>
-                  <div class="traccia">
-                    <div class="traccia-int">
-                      <div
-                        style="
-                          display: flex !important;
-                          align-items: center !important;
-                        "
-                      >
-                        <span class="num-traccia d-none d-lg-block">1</span>
-                        <div class="info-traccia">
-                          <span class="titolo-traccia">Titolo Traccia</span>
-                          <span class="artista-traccia">Nome Artista</span>
-                        </div>
-                      </div>
-                      <span class="riproduzioni d-none d-lg-block">
-                        2342.432</span
-                      >
-                      <span class="durata-traccia d-none d-lg-block">
-                        1:26</span
-                      >
-                      <div class="d-lg-none azioni-traccia">
-                        <i
-                          class="bi bi-three-dots-vertical"
-                          style="color: #ccc"
-                        ></i>
-                      </div>
-                    </div>
-                  </div>
+                  </div> -->
                 </section>
               </div>
             </div>
