--- a/artist.html
+++ b/artist.html
@@ -202,7 +202,10 @@
                     class="d-flex flex-row align-items-center navbar-nav me-auto mb-2 mb-md-0"
                   >
                     <li class="nav-item">
-                      <a class="nav-link active" href="#"
+                      <a
+                        class="nav-link active"
+                        href="javascript:void(0)"
+                        onclick="goBack()"
                         ><i class="bi bi-chevron-left"></i
                       ></a>
                     </li>
