Adds, button hide and show more

--- a/artist.html
+++ b/artist.html
@@ -360,7 +360,7 @@
                       onclick="getTracks()"
                       type="button"
                       id="hide"
-                      class="btn btn-dark text-white px-3 py-2 d-none"
+                      class="btn btn-dark text-white px-3 py-2"
                     >
                       NASCONDI
                     </button>
